--- a/public/series/index.html
+++ b/public/series/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN" dir="ltr" class="scroll-smooth" data-default-appearance="dark"
-  data-auto-appearance="true"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  data-auto-appearance="true"><head>
   <meta charset="utf-8" />
   
   <meta http-equiv="content-language" content="zh-CN" />
@@ -15,7 +15,7 @@
   
   
   
-  <link rel="canonical" href="http://localhost:1313/series/" />
+  <link rel="canonical" href="https://funnilydog.github.io/series/" />
   
   <link rel="alternate" type="application/rss+xml" href="/series/index.xml" title="FunnilyDog‘s Site" />
   
@@ -62,7 +62,7 @@
   
   
   
-  <meta property="og:url" content="http://localhost:1313/series/">
+  <meta property="og:url" content="https://funnilydog.github.io/series/">
   <meta property="og:site_name" content="FunnilyDog‘s Site">
   <meta property="og:title" content="Series">
   <meta property="og:description" content="My awesome website 22222">
@@ -483,7 +483,7 @@
       
         <span class="px-2 text-base text-primary-500">&middot;</span>
         <span class="text-base text-neutral-400">
-          6
+          5
         </span>
       
     </h2>
