--- a/public/series/八股文-查缺补漏/index.html
+++ b/public/series/八股文-查缺补漏/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN" dir="ltr" class="scroll-smooth" data-default-appearance="dark"
-  data-auto-appearance="true"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  data-auto-appearance="true"><head>
   <meta charset="utf-8" />
   
   <meta http-equiv="content-language" content="zh-CN" />
@@ -15,7 +15,7 @@
   
   
   
-  <link rel="canonical" href="http://localhost:1313/series/%E5%85%AB%E8%82%A1%E6%96%87-%E6%9F%A5%E7%BC%BA%E8%A1%A5%E6%BC%8F/" />
+  <link rel="canonical" href="https://funnilydog.github.io/series/%E5%85%AB%E8%82%A1%E6%96%87-%E6%9F%A5%E7%BC%BA%E8%A1%A5%E6%BC%8F/" />
   
   <link rel="alternate" type="application/rss+xml" href="/series/%E5%85%AB%E8%82%A1%E6%96%87-%E6%9F%A5%E7%BC%BA%E8%A1%A5%E6%BC%8F/index.xml" title="FunnilyDog‘s Site" />
   
@@ -62,7 +62,7 @@
   
   
   
-  <meta property="og:url" content="http://localhost:1313/series/%E5%85%AB%E8%82%A1%E6%96%87-%E6%9F%A5%E7%BC%BA%E8%A1%A5%E6%BC%8F/">
+  <meta property="og:url" content="https://funnilydog.github.io/series/%E5%85%AB%E8%82%A1%E6%96%87-%E6%9F%A5%E7%BC%BA%E8%A1%A5%E6%BC%8F/">
   <meta property="og:site_name" content="FunnilyDog‘s Site">
   <meta property="og:title" content="八股文 查缺补漏">
   <meta property="og:description" content="My awesome website 22222">
