--- a/public/nginx/index.html
+++ b/public/nginx/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN" dir="ltr" class="scroll-smooth" data-default-appearance="dark"
-  data-auto-appearance="true"><head>
+  data-auto-appearance="true"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8" />
   
   <meta http-equiv="content-language" content="zh-CN" />
@@ -15,7 +15,7 @@
   
   
   
-  <link rel="canonical" href="http://blog.funnilydog.top/nginx/" />
+  <link rel="canonical" href="http://localhost:1313/nginx/" />
   
   <link rel="alternate" type="application/rss+xml" href="/nginx/index.xml" title="FunnilyDog‘s Site" />
   
@@ -62,7 +62,7 @@
   
   
   
-  <meta property="og:url" content="http://blog.funnilydog.top/nginx/">
+  <meta property="og:url" content="http://localhost:1313/nginx/">
   <meta property="og:site_name" content="FunnilyDog‘s Site">
   <meta property="og:title" content="Nginxes">
   <meta property="og:description" content="My awesome website 22222">
